# agent-trust

./: LICENSE  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml
agent_trust/: __init__.py  agent_trust.py  agent_trust_agency.py  agent_trust_boundaries.py  agent_trust_scope.py  boundaries.py  scanner.py  scope.py  utils.py
docs/: VYGOTSKY_RAIN.md  index.html
tests/: test_core.py  test_public_api.py  test_security_regressions.py
